fixed dashboard links

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -21,7 +21,7 @@
                 <div class="card-body mt-3">
                     <h5 class="card-title"><%= course.name %></h5>
                     <p class="card-text"><%= course.type %></p>
-                    <a href="/all/<%= course._id %>" class="learn-btn">Learn!</a>
+                    <a href="<%= course.link %>" target="_blank" class="learn-btn">Learn!</a>
                 </div>
             </div>
         </div>
