--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,8 +2,8 @@
 <main class="border mt-5 mr-4" id="outer">
     <div class="container-fluid mt-4 mb-4 px-4">
         <div class="row" id="inner">
-            <div class="border col-md-3">
-                <img src="test.jpg" id="pic" />
+            <div class="col-md-3">
+                <img src="default-profile-pic-png-8.png" id="pic" />
             </div>
             <div class="col-md-9">
                 <h1 id="welcome">Welcome back <strong><%=name%>!</strong></h1>
